--- a/app/src/main/res/layout/content_detail.xml
+++ b/app/src/main/res/layout/content_detail.xml
@@ -10,6 +10,8 @@
   <LinearLayout
       android:layout_marginTop="50dp"
       android:id="@+id/linear_filename"
+      android:padding="10dp"
+
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       android:layout_width="match_parent"
@@ -37,6 +39,7 @@
         android:id="@+id/linear_fileStatus"
         app:layout_constraintTop_toTopOf="@+id/linear_filename"
         app:layout_constraintStart_toStartOf="parent"
+        android:padding="10dp"
         android:layout_width="match_parent"
         android:orientation="horizontal"
         android:layout_height="wrap_content">
@@ -57,10 +60,13 @@
             android:text="@string/status"/>
     </LinearLayout>
     <Button
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:id="@+id/detail_button"
         android:background="@color/colorAccent"
         android:text="@string/ok"
         android:textSize="28sp"
+        app:textColor="@drawable/custom_button"
         android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
         app:layout_constraintBottom_toBottomOf="parent"
         style="@style/button" />
